# capstone-api

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  makefile  pyproject.toml  requirements.txt
app/: constant.py  main.py
app/api/v1/: constant.py  routes.py
app/api/v1/routers/: background.py  character.py  model.py
app/services/: blob.py  constant.py  open_ai.py  run_model.py
app/services/animated_drawings/: config.py  render.py
app/services/animated_drawings/controller/: controller.py  interactive_controller.py  video_render_controller.py
app/services/animated_drawings/model/: animated_drawing.py  box.py  bvh.py  camera.py  floor.py  joint.py  quaternions.py  rectangle.py  retargeter.py  scene.py  transform.py  transform_widget.py  vectors.py
app/services/animated_drawings/view/: mesa_view.py  view.py  window_view.py
app/services/examples/: annotations_to_animation.py  image_to_annotations.py
app/services/examples/bvh/rokoko/: anxiety.bvh  bumblebee.bvh  groove.bvh  hiplet_99.bvh  tiramisu_cake.bvh
app/services/examples/config/motion/: anxiety.yaml  anxiety.yaml  bumblebee.yaml  groove.yaml  hiplet_99.yaml  tiramisu_cake.yaml
app/services/examples/config/retarget/: hiplet_99.yaml
